# true-size-of-cities

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  data_loader.py  main.py  schemas.py
backend/app/data/: cities.geojson  countries.geojson
backend/app/routers/: __init__.py  cities.py  countries.py
backend/tests/: test_api.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/Map/: MapContainer.tsx  cityColors.ts
frontend/src/components/Sidebar/: CitySelector.tsx  CountrySelector.tsx  SelectedCities.tsx  Sidebar.tsx
frontend/src/hooks/: useGeoData.ts
frontend/src/store/: mapStore.ts
frontend/src/types/: index.ts
